--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -1490,6 +1490,7 @@
      "iopub.status.idle": "2024-05-08T18:18:49.522593Z",
      "shell.execute_reply": "2024-05-08T18:18:49.522109Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013794,
      "end_time": "2024-05-08T18:18:49.523648",
@@ -1524,6 +1525,157 @@
     "\n",
     "# Testing the solution\n",
     "assert cherryPickupSpaceOptimized([[1,0,0,0,0,0,1],[2,0,0,0,0,3,0],[2,0,9,0,0,0,0],[0,3,0,5,4,0,0],[1,0,2,3,0,0,6]]) == 28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17816765",
+   "metadata": {},
+   "source": [
+    "Subset sum equals target\n",
+    "Video Link: https://youtu.be/fWX9xDmIzRI?si=jb2Tgvw_E0Tyk1Pj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f37d7b7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isSubsetSumMemo(N: int, arr: list[int], target: int) -> int:\n",
+    "    \"\"\"\n",
+    "    For cases where subset exists, the recursion would stop early. For the negative cases, we would get overlapping subproblems and\n",
+    "    hence memoization would help decrease the time complexity.\n",
+    "\n",
+    "    Time without memoization: O(2 ^ N), Space: O(N)\n",
+    "    With memoization: O(N x target), Space: O(N x target) + O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dp: list[list[int]] = [[-1 for j in range(target + 1)] for i in range(N)]\n",
+    "    def backtrack(i: int, total: int) -> bool:\n",
+    "        if total == 0:\n",
+    "            return True\n",
+    "        elif total < 0 or i > N - 1:\n",
+    "            return False\n",
+    "        elif dp[i][total] != -1:\n",
+    "            return bool(dp[i][total])\n",
+    "        else:\n",
+    "            result = backtrack(i + 1, total - arr[i]) or backtrack(i + 1, total)\n",
+    "            dp[i][total] = int(result)\n",
+    "            return result\n",
+    "\n",
+    "    return backtrack(0, target)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSubsetSumMemo(6, [3, 34, 4, 12, 5, 2], 9) == True\n",
+    "assert isSubsetSumMemo(6, [3, 34, 4, 12, 5, 2], 30) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5551c36b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isSubsetSumTab(N: int, arr: list[int], target: int) -> bool:\n",
+    "    \"\"\"\n",
+    "    Each cell in the dp represents -> If total - arr[i] is true down the line.\n",
+    "    Note that dp[i][0] is always true, since if the target is to be 0 regardless of arr[i] tehn subsetSumTarget is possible.\n",
+    "    \"\"\"\n",
+    "    dp: list[list[int]] = [[1 if j == 0 else -1 if i < N else 0 for j in range(target + 1)] for i in range(N + 1)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for total in range(1, target + 1):\n",
+    "            if dp[i + 1][total] == 1 or (total - arr[i] >= 0 and dp[i + 1][total - arr[i]] == 1):\n",
+    "                dp[i][total] = 1\n",
+    "            else:\n",
+    "                dp[i][total] = 0\n",
+    "\n",
+    "    print(dp)\n",
+    "    return bool(dp[0][target])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSubsetSumTab(6, [3, 34, 4, 12, 5, 2], 9) == True\n",
+    "assert isSubsetSumTab(6, [3, 34, 4, 12, 5, 2], 30) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca80b369",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isSubsetSumSpaceOptimized(N: int, arr: list[int], target: int) -> bool:\n",
+    "    \"Time: O(N x target), Space: O(target)\"\n",
+    "    dp: list[int] = [0 if j > 0 else 1 for j in range(target + 1)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_: list[int] = []\n",
+    "        for total in range(target + 1):\n",
+    "            if total == 0 or dp[total] == 1 or (total - arr[i] >= 0 and dp[total - arr[i]] == 1):\n",
+    "                next_.append(1)\n",
+    "            else:\n",
+    "                next_.append(0)\n",
+    "\n",
+    "        dp = next_\n",
+    "\n",
+    "    return bool(dp[target])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSubsetSumSpaceOptimized(6, [3, 34, 4, 12, 5, 2], 9) == True\n",
+    "assert isSubsetSumSpaceOptimized(6, [3, 34, 4, 12, 5, 2], 30) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a10f4ca",
+   "metadata": {},
+   "source": [
+    "Partition equal subset sum: https://leetcode.com/problems/partition-equal-subset-sum/\n",
+    "Video Link: https://youtu.be/7win3dcgo3k?si=LJO4Ot4EZzQ2fRc0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "373088cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/partition-equal-subset-sum/submissions/1253314239\n",
+    "def canPartition(nums: list[int]) -> bool:\n",
+    "    def subsetSumEqualsTarget(target: int) -> bool:\n",
+    "        \"Time: O(N x target), Space: O(target)\"\n",
+    "        dp: list[bool] = [False if i > 0 else True for i in range(target + 1)]\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            next_: list[bool] = []\n",
+    "            for total in range(target + 1):\n",
+    "                if total == 0 or dp[total] or (total - nums[i] >= 0 and dp[total - nums[i]]):\n",
+    "                    next_.append(True)\n",
+    "                else:\n",
+    "                    next_.append(False)\n",
+    "\n",
+    "            dp = next_\n",
+    "\n",
+    "        return dp[target]\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    total = sum(nums)\n",
+    "    return total % 2 == 0 and subsetSumEqualsTarget(total // 2)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canPartition([1,5,11,5]) == True\n",
+    "assert canPartition([1,2,3,5]) == False\n",
+    "assert canPartition([3,3,3,4,5]) == True"
    ]
   }
  ],
