--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1837,6 +1837,7 @@
      "iopub.status.idle": "2024-05-08T18:18:47.054583Z",
      "shell.execute_reply": "2024-05-08T18:18:47.054059Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013931,
      "end_time": "2024-05-08T18:18:47.055718",
@@ -1875,6 +1876,39 @@
     "\n",
     "# Testing the solution\n",
     "assert findRelativeRanks([10,3,8,9,4]) == [\"Gold Medal\",\"5\",\"Bronze Medal\",\"Silver Medal\",\"4\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40545f44",
+   "metadata": {},
+   "source": [
+    "0/1 Knapsack before watching Striver's solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de09fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TLE :(\n",
+    "def knapsack01(N: int, max_weight: int, weights: list[int], values: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, total_weight: int, total_value: int) -> int:\n",
+    "        if total_weight > max_weight:\n",
+    "            return -1\n",
+    "        elif i == N:\n",
+    "            return total_value\n",
+    "        else:\n",
+    "            return max(backtrack(i + 1, total_weight + weights[i], total_value + values[i]), backtrack(i + 1, total_weight, total_value))\n",
+    "\n",
+    "    return backtrack(0, 0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert knapsack01(4, 5, [1,2,4,5], [5,4,8,6]) == 13\n",
+    "assert knapsack01(3, 8, [3,4,5], [30,50,60]) == 90"
    ]
   }
  ],
