--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "807dd9ee",
+   "metadata": {},
+   "source": [
+    "Important notes\n",
+    "- All subset based problems (non contigous subarrays would have the pick/nopick approach)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "457ab51f",
    "metadata": {
     "papermill": {
@@ -1724,6 +1733,7 @@
      "iopub.status.idle": "2024-05-09T07:01:29.907898Z",
      "shell.execute_reply": "2024-05-09T07:01:29.907364Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012722,
      "end_time": "2024-05-09T07:01:29.909174",
@@ -1760,6 +1770,408 @@
     "assert canPartition([1,5,11,5]) == True\n",
     "assert canPartition([1,2,3,5]) == False\n",
     "assert canPartition([3,3,3,4,5]) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f6a268",
+   "metadata": {},
+   "source": [
+    "Partition Array Into Two Arrays to Minimize Sum Difference\n",
+    "Video link: https://youtu.be/GS_OqZb2CWc?si=Jtc2dP_dqmNi5Zli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00588c88",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimumDifferenceBrute(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Throws a TLE :(\n",
+    "    \"\"\"\n",
+    "    N, total_sum = len(nums), sum(nums)\n",
+    "    subset_length = N // 2\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, subset_sum: int, count: int) -> float:\n",
+    "        if count == subset_length:\n",
+    "            return abs(2 * subset_sum - total_sum)\n",
+    "        elif i == N:\n",
+    "            return math.inf\n",
+    "        else:\n",
+    "            return min(backtrack(i + 1, subset_sum + nums[i], count + 1), backtrack(i + 1, subset_sum, count))\n",
+    "\n",
+    "    result = int(backtrack(0, 0, 0))\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumDifferenceBrute([3,9,7,3]) == 2\n",
+    "assert minimumDifferenceBrute([-36,36]) == 72\n",
+    "assert minimumDifferenceBrute([2,-1,0,4,-2,-9]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c34ef1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimumDifference(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Use the DP tabulation approach we used to check if a subset with target sum exists. Still Memory limit exceeded.\n",
+    "    Note that this is different the one on the video. This solution is leetcode specific. In the video by Striver, the values can only be positive. Further more we can split into any size.\n",
+    "    In LC however, the subset must be split into 2 halves, values can be both positive and negative.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N, total_abs_sum, total_sum = len(nums), sum(map(abs, nums)), sum(nums)\n",
+    "\n",
+    "    # Each value represents the length of subset summing up to target. -1 if cannot be reached.\n",
+    "    dp: list[int] = [-1 if j != 0 else 0 for j in range(-total_abs_sum, total_abs_sum + 1)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_dp: list[int] = []\n",
+    "        for target in range(-total_abs_sum, total_abs_sum + 1):\n",
+    "            # Pick, subset length incremented by 1\n",
+    "            if 0 <= target - nums[i] + total_abs_sum <= 2 * total_abs_sum and dp[target - nums[i] + total_abs_sum] != -1:\n",
+    "                subset_length = dp[target - nums[i] + total_abs_sum] + 1\n",
+    "                existing_length = dp[target + total_abs_sum]\n",
+    "                next_dp.append(subset_length if existing_length != N // 2 else existing_length)\n",
+    "            # No pick, hence subset length is unupdated\n",
+    "            elif dp[target + total_abs_sum] != -1:\n",
+    "                next_dp.append(dp[target + total_abs_sum])\n",
+    "            # Base case\n",
+    "            elif target == 0:\n",
+    "                next_dp.append(0)\n",
+    "            # Sum cannot be reached\n",
+    "            else:\n",
+    "                next_dp.append(-1)\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    # Find out targets where value is N // 2\n",
+    "    min_diff: float = math.inf\n",
+    "    for subset_sum, subset_length in enumerate(dp, start=-total_abs_sum):\n",
+    "        if subset_length == N // 2:\n",
+    "            min_diff = min(min_diff, abs(2 * subset_sum - total_sum))\n",
+    "\n",
+    "    return int(min_diff)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumDifference([3,9,7,3]) == 2\n",
+    "assert minimumDifference([-36,36]) == 72\n",
+    "assert minimumDifference([2,-1,0,4,-2,-9]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54752ee1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minSubsetSumDifference(arr: list[int], N: int) -> int:\n",
+    "    # Compute max total sum\n",
+    "    total_sum: int = sum(arr)\n",
+    "\n",
+    "    # Compute DP grid for all possible subset sums\n",
+    "    dp: list[bool] = [False if i > 0 else True for i in range(total_sum + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_dp: list[bool] = []\n",
+    "        for target in range(total_sum + 1):\n",
+    "            if target == 0 or dp[target] or (target - arr[i] >= 0 and dp[target - arr[i]]):\n",
+    "                next_dp.append(True)\n",
+    "            else:\n",
+    "                next_dp.append(False)\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    # Compute the minimum subset difference\n",
+    "    min_diff: int = total_sum\n",
+    "\n",
+    "    # total_sum / 2 since it is enough if we computed one half, diff of sum from total sum would cover the other half as well\n",
+    "    for target in range(math.ceil(total_sum / 2) + 1):\n",
+    "        if dp[target]:\n",
+    "            min_diff = min(min_diff, abs(2 * target - total_sum))\n",
+    "\n",
+    "    return min_diff\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minSubsetSumDifference([8,6,5], 3) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884d535e",
+   "metadata": {},
+   "source": [
+    "Count subsets with sum k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534b55bb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def perfectSumMemo(nums: list[int], N: int, K: int):\n",
+    "    \"\"\"\n",
+    "    Time: O(N * K) + O(N); Space: O(N * K)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Filter out all the zeros\n",
+    "    arr: list[int] = []\n",
+    "    N = zero_count = 0\n",
+    "    for n in nums:\n",
+    "        if n > 0:\n",
+    "            arr.append(n)\n",
+    "            N += 1\n",
+    "        else:\n",
+    "            zero_count += 1\n",
+    "\n",
+    "    # Compute the results and store it to a list\n",
+    "    dp: list[list[int]] = [[-1 for j in range(K + 1)] for i in range(N)]\n",
+    "\n",
+    "    # Recursively find the solution\n",
+    "    def backtrack(i: int, total: int) -> int:\n",
+    "        if total == K:\n",
+    "            return 1\n",
+    "        elif i >= N or total > K:\n",
+    "            return 0\n",
+    "        elif dp[i][total] != -1:\n",
+    "            return dp[i][total]\n",
+    "        else:\n",
+    "            result = backtrack(i + 1, total + arr[i]) + backtrack(i + 1, total)\n",
+    "            dp[i][total] = result\n",
+    "            return result\n",
+    "\n",
+    "    return backtrack(0, 0) * (2 ** zero_count)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert perfectSumMemo([5, 2, 3, 10, 6, 8], 6, 10) == 3\n",
+    "assert perfectSumMemo([1, 0], 2, 1) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dee4da2c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def perfectSumTabulation(nums: list[int], N: int, K: int):\n",
+    "    # Filter out all the zeros\n",
+    "    arr: list[int] = []\n",
+    "    N = zero_count = 0\n",
+    "    for n in nums:\n",
+    "        if n > 0:\n",
+    "            arr.append(n)\n",
+    "            N += 1\n",
+    "        else:\n",
+    "            zero_count += 1\n",
+    "\n",
+    "    # Initialize a DP array\n",
+    "    dp: list[list[int]] = [[-1 if j < K else 1 for j in range(K + 1)] for i in range(N)]\n",
+    "    dp.append([0 if j < K else 1 for j in range(K + 1)])\n",
+    "\n",
+    "    # Traverse through grid\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for total in range(K):\n",
+    "            dp[i][total] = dp[i + 1][total]\n",
+    "            if total + arr[i] <= K:\n",
+    "                dp[i][total] += dp[i + 1][total + arr[i]]\n",
+    "\n",
+    "    return dp[0][0] * (2 ** zero_count)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert perfectSumTabulation([5, 2, 3, 10, 6, 8], 6, 10) == 3\n",
+    "assert perfectSumTabulation([1, 0], 2, 1) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2468ad",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def perfectSum(nums: list[int], N: int, K: int):\n",
+    "    # Filter out all the zeros\n",
+    "    arr: list[int] = []\n",
+    "    N = zero_count = 0\n",
+    "    for n in nums:\n",
+    "        if n > 0:\n",
+    "            arr.append(n)\n",
+    "            N += 1\n",
+    "        else:\n",
+    "            zero_count += 1\n",
+    "\n",
+    "    # Initialize a DP array\n",
+    "    dp: list[int] = [0 if j < K else 1 for j in range(K + 1)]\n",
+    "\n",
+    "    # Traverse through grid\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_dp: list[int] = []\n",
+    "        for total in range(K + 1):\n",
+    "            next_dp.append(dp[total])\n",
+    "            if total + arr[i] <= K:\n",
+    "                next_dp[-1] += dp[total + arr[i]]\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[0] * (2 ** zero_count)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert perfectSum([5, 2, 3, 10, 6, 8], 6, 10) == 3\n",
+    "assert perfectSum([1, 0], 2, 1) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bff8c7f",
+   "metadata": {},
+   "source": [
+    "Count Paritions with given difference: https://youtu.be/zoilQD1kYSg?si=F8PFSkzkZXEsFJ2N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "051bd113",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countPartitionsMemo(N: int, diff: int, arr: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    s1 + s2 = S\n",
+    "    s1 - s2 = d\n",
+    "    2 * s1 = S + d\n",
+    "\n",
+    "    Time: O(N x target) + O(N)\n",
+    "    Space: O(N x target)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Simply check if the target exists\n",
+    "    target = (sum(arr) + diff) / 2\n",
+    "\n",
+    "    # Count all subset sums equals target\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, total: int) -> int:\n",
+    "        if i == N:\n",
+    "            return total == target\n",
+    "        elif total > target:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return backtrack(i + 1, total + arr[i]) + backtrack(i + 1, total)\n",
+    "\n",
+    "    result = backtrack(0, 0) if target == int(target) else 0\n",
+    "    MOD = int(1e9 + 7)\n",
+    "    return result % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPartitionsMemo(4, 0, [1,1,1,1]) == 6\n",
+    "assert countPartitionsMemo(4, 3, [5,2,6,4]) == 1\n",
+    "assert countPartitionsMemo(5, 5, [1,3,3,2,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cd9fbc1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countPartitionsTabulation(N: int, diff: int, arr: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Time: O(N x target), Space: O(N x target)\n",
+    "    \"\"\"\n",
+    "    # Simply check if the target exists\n",
+    "    target_: float = (sum(arr) + diff) / 2\n",
+    "    MOD = int(1e9 + 7)\n",
+    "\n",
+    "    if int(target_) != target_:\n",
+    "        return 0\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        # Convert to int for typing support\n",
+    "        target = int(target_)\n",
+    "\n",
+    "        # Initialize DP array for tabulation\n",
+    "        dp: list[list[int]] = [[0 if j != target or i != N else 1 for j in range(target + 1)] for i in range(N + 1)]\n",
+    "\n",
+    "        # Iterate through DP and find the solution\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            for total in range(target + 1):\n",
+    "                dp[i][total] = dp[i + 1][total]\n",
+    "                if total + arr[i] <= target:\n",
+    "                    dp[i][total] += dp[i + 1][total + arr[i]]\n",
+    "\n",
+    "        return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPartitionsTabulation(4, 3, [5,2,6,4]) == 1\n",
+    "assert countPartitionsTabulation(4, 3, [5,2,6,4]) == 1\n",
+    "assert countPartitionsTabulation(5, 5, [1,3,3,2,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09aacbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countPartitions(N: int, diff: int, arr: list[int]) -> int:\n",
+    "    # Simply check if the target exists\n",
+    "    target_: float = (sum(arr) + diff) / 2\n",
+    "    MOD = int(1e9 + 7)\n",
+    "\n",
+    "    if int(target_) != target_:\n",
+    "        return 0\n",
+    "\n",
+    "    else:\n",
+    "        # Convert to int for type hinting\n",
+    "        target = int(target_)\n",
+    "\n",
+    "        # Create a 1D grid (space optimized)\n",
+    "        dp: list[int] = [0 if j != target else 1 for j in range(target + 1)]\n",
+    "\n",
+    "        # Iterate through DP\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            next_dp: list[int] = []\n",
+    "            for total in range(target + 1):\n",
+    "                next_dp.append(dp[total])\n",
+    "                if total + arr[i] <= target:\n",
+    "                    next_dp[-1] += dp[total + arr[i]]\n",
+    "\n",
+    "            dp = next_dp\n",
+    "\n",
+    "        return dp[0] % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPartitions(4, 3, [5,2,6,4]) == 1\n",
+    "assert countPartitions(4, 3, [5,2,6,4]) == 1\n",
+    "assert countPartitions(5, 5, [1,3,3,2,1]) == 0"
    ]
   }
  ],
