--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -15,7 +15,16 @@
    },
    "source": [
     "Important notes\n",
-    "- All subset based problems (non contigous subarrays would have the pick/nopick approach)"
+    "- All subset based problems (non contigous subarrays would have the pick/nopick approach)\n",
+    "- To convert a memoization solution to tabulation:\n",
+    "  1. Find the base case and assign the the DP\n",
+    "  2. Start iterating from the base case all the way to our starting point\n",
+    "  3. Return the value at the starting point\n",
+    "- We can space optimize a tabulation solution whenever we see only the prev/next rows being used in the tabualation solution.\n",
+    "- Time complexity of unmemoized DP code is typically exponential O(number of branches ** N)\n",
+    "- All subsets problem involve recursion trying all combinations: Pick, no pick\n",
+    "- For problems where there is an infinite supply, take would increase total but remain at the same index.\n",
+    "- For problems involving counts, we try all possb combinations and base case would either return 1 or 0."
    ]
   },
   {
@@ -2579,6 +2588,12 @@
    "outputs": [],
    "source": [
     "def coinChangeMemoization(coins: list[int], amount: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Without memoization, the time complexity is roughly 2 ** N. It would be greater than\n",
+    "    2 ** N since at each index for take we are still staying at the same index.\n",
+    "\n",
+    "    With memoization, the time complexity is O(N x amount)\n",
+    "    \"\"\"\n",
     "    @functools.cache\n",
     "    def backtrack(i: int, total: int) -> float:\n",
     "        if total == amount:\n",
@@ -2649,6 +2664,7 @@
      "iopub.status.idle": "2024-05-11T17:21:28.296317Z",
      "shell.execute_reply": "2024-05-11T17:21:28.295788Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014208,
      "end_time": "2024-05-11T17:21:28.297372",
@@ -2674,6 +2690,430 @@
     "# Testing the solution\n",
     "assert coinChangeSpaceOptimized([1,2,5], 11) == 3\n",
     "assert coinChangeSpaceOptimized([2], 3) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e5fb6cb",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/b3GD8263-PQ?si=CNz-raf3oynQQsPJ\n",
+    "Target Sum: https://leetcode.com/problems/target-sum/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18960ee2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/target-sum/submissions/1255976702\n",
+    "def findTargetSumWaysMemo(nums: list[int], target: int) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, total: int) -> int:\n",
+    "        if i == N:\n",
+    "            return int(total == target)\n",
+    "        else:\n",
+    "            return backtrack(i + 1, total - nums[i]) + backtrack(i + 1, total + nums[i])\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTargetSumWaysMemo([1,1,1,1,1], 3) == 5\n",
+    "assert findTargetSumWaysMemo([1], 2) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8420cf7b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def findTargetSumWaysTab(nums: list[int], target: int) -> int:\n",
+    "    N: int = len(nums)\n",
+    "    boundary: int = sum(nums)\n",
+    "    dp: list[list[int]] = [[0 if i < N or j != target else 1 for j in range(-boundary, boundary + 1)] for i in range(N + 1)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for total in range(-boundary, boundary + 1):\n",
+    "            if total - nums[i] + boundary >= 0:\n",
+    "                dp[i][total + boundary] += dp[i + 1][total - nums[i] + boundary]\n",
+    "            if total + nums[i] + boundary <= 2 * boundary:\n",
+    "                dp[i][total + boundary] += dp[i + 1][total + nums[i] + boundary]\n",
+    "\n",
+    "    return dp[0][boundary]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTargetSumWaysTab([1,1,1,1,1], 3) == 5\n",
+    "assert findTargetSumWaysTab([1], 2) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c66396e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/target-sum/submissions/1255976333/\n",
+    "def findTargetSumWays(nums: list[int], target: int) -> int:\n",
+    "    N = len(nums)\n",
+    "    boundary: int = sum(nums)\n",
+    "    dp: list[int] = [0 if j != target else 1 for j in range(-boundary, boundary + 1)]\n",
+    "\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_dp: list[int] = []\n",
+    "        for total in range(-boundary, boundary + 1):\n",
+    "            next_dp.append(0)\n",
+    "            if total + nums[i] + boundary <= 2 * boundary:\n",
+    "                next_dp[-1] += dp[total + nums[i] + boundary]\n",
+    "            if total - nums[i] + boundary >= 0:\n",
+    "                next_dp[-1] += dp[total - nums[i] + boundary]\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[boundary]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTargetSumWays([1,1,1,1,1], 3) == 5\n",
+    "assert findTargetSumWays([1], 2) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f0e96f1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striver's approach: Use logic from 'Count Paritions with given difference'\n",
+    "# https://leetcode.com/problems/target-sum/submissions/1255993345/\n",
+    "def findTargetSumWaysStriver(nums: list[int], target: int) -> int:\n",
+    "    \"\"\"\n",
+    "    We need to count the number of subsets s1, s2 such that s1 - s2 = target.\n",
+    "    s1 = (S + d) / 2\n",
+    "    \"\"\"\n",
+    "\n",
+    "    S = sum(nums)\n",
+    "    s1 = (S + target) / 2\n",
+    "    s2 = S - s1\n",
+    "\n",
+    "    # Edge case - target is negative.\n",
+    "    if s1 < 0:\n",
+    "        s1 = s2\n",
+    "\n",
+    "    count = 0\n",
+    "    if int(s1) == s1:\n",
+    "        s1 = int(s1)\n",
+    "        zero_count = nums.count(0)\n",
+    "        nums = list(filter(lambda x: x != 0, nums))\n",
+    "        N = len(nums)\n",
+    "        dp: list[int] = [0 if j < s1 else 1 for j in range(s1 + 1)]\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            for total in range(s1 + 1):\n",
+    "                if total + nums[i] <= s1:\n",
+    "                    dp[total] += dp[total + nums[i]]\n",
+    "\n",
+    "        count = dp[0] * (2 ** zero_count)\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTargetSumWaysStriver([1,1,1,1,1], 3) == 5\n",
+    "assert findTargetSumWaysStriver([1,0,0], 1) == 4\n",
+    "assert findTargetSumWaysStriver([100], -200) == 0\n",
+    "assert findTargetSumWaysStriver([100], -100) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ee6894",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/HgyouUi11zk?si=tgZcsIOYwWogacGr\n",
+    "Coin Change II: https://leetcode.com/problems/coin-change-ii/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a21ca5a5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def coinChangeMemo(amount: int, coins: list[int]):\n",
+    "    \"\"\"\n",
+    "    Time: ~O(N x amount), Space: O(N x amount) + O(amount)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, total: int) -> int:\n",
+    "        if total == amount:\n",
+    "            return 1\n",
+    "        elif total > amount or i == N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return backtrack(i, total + coins[i]) + backtrack(i + 1, total)\n",
+    "\n",
+    "    N = len(coins)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert coinChangeMemo(5, [1,2,5]) == 4\n",
+    "assert coinChangeMemo(3, [2]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74d7fa9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/coin-change-ii/submissions/1256028931\n",
+    "def coinChangeTab(amount: int, coins: list[int]):\n",
+    "    N = len(coins)\n",
+    "    dp: list[int] = [0 if j != amount else 1 for j in range(amount + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for total in range(amount, -1, -1):\n",
+    "            if total + coins[i] <= amount:\n",
+    "                dp[total] += dp[total + coins[i]]\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert coinChangeTab(5, [1,2,5]) == 4\n",
+    "assert coinChangeTab(3, [2]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b593c4",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/OgvOZ6OrJoY?si=rcbpx6IrU_SvQ4v1\n",
+    "Unbounded Knapsack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc22211",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def unboundedKnapSackMemo(N: int, max_weight: int, values: list[int], weights: list[int]) -> int:\n",
+    "     @functools.cache\n",
+    "     def backtrack(i: int, total_weight: int) -> float:\n",
+    "         if total_weight > max_weight:\n",
+    "             return -math.inf\n",
+    "         elif i == N:\n",
+    "             return 0\n",
+    "         else:\n",
+    "             return max(values[i] + backtrack(i, total_weight + weights[i]), backtrack(i + 1, total_weight))\n",
+    "\n",
+    "     return int(backtrack(0, 0))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert unboundedKnapSackMemo(2, 3, [1, 1], [2, 1]) == 3\n",
+    "assert unboundedKnapSackMemo(4, 8, [6, 1, 7, 7], [1, 3, 4, 5]) == 48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3377312f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def unboundedKnapSackTab(N: int, max_weight: int, values: list[int], weights: list[int]) -> int:\n",
+    "    dp: list[int] = [0 for j in range(max_weight + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for total in range(max_weight, -1, -1):\n",
+    "            if total + weights[i] <= max_weight:\n",
+    "                dp[total] = max(dp[total], values[i] + dp[total + weights[i]])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert unboundedKnapSackTab(2, 3, [1, 1], [2, 1]) == 3\n",
+    "assert unboundedKnapSackTab(4, 8, [6, 1, 7, 7], [1, 3, 4, 5]) == 48"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d0c40ff",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/mO8XpGoJwuo?si=uzBPZ8auw70L9WCm\n",
+    "Rod cutting Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aee57cd8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def cutRodMemo(price: list[int], N: int) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, length: int) -> float:\n",
+    "        if length == 0:\n",
+    "            return 0\n",
+    "        elif i == N or length < 0:\n",
+    "            return -math.inf\n",
+    "        else:\n",
+    "            return max(price[i] + backtrack(i, length - i - 1), backtrack(i + 1, length))\n",
+    "\n",
+    "    result = backtrack(0, N)\n",
+    "    return int(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert cutRodMemo([1, 5, 8, 9, 10, 17, 17, 20], 8) == 22\n",
+    "assert cutRodMemo([3, 5, 8, 9, 10, 17, 17, 20], 8) == 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcdf21dd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def cutRodTab(price: list[int], N: int) -> int:\n",
+    "    dp: list[float] = [-math.inf if j > 0 else 0 for j in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for length in range(N + 1):\n",
+    "            if length - i - 1 >= 0:\n",
+    "                dp[length] = max(dp[length], price[i] + dp[length - i - 1])\n",
+    "\n",
+    "    return int(dp[N])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert cutRodTab([1, 5, 8, 9, 10, 17, 17, 20], 8) == 22\n",
+    "assert cutRodTab([3, 5, 8, 9, 10, 17, 17, 20], 8) == 24"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e8177cc",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/NPZn9jBrX8U?si=RNey3xHjlEm1LXyr\n",
+    "Longest common subsequences: https://leetcode.com/problems/longest-common-subsequence\n",
+    "Naive approach: Generate all subsequences O((2 ** N) x (2 ** M)) and compare common subsequences in both"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917d5e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longestCommonSubsequenceMemo(text1: str, text2: str) -> int:\n",
+    "    # Time: O(N x M), Space: O(N x M) + O(M + N)\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i == N1 or j == N2:\n",
+    "            return 0\n",
+    "        elif text1[i] == text2[j]:\n",
+    "            return 1 + backtrack(i + 1, j + 1)\n",
+    "        else:\n",
+    "            return max(backtrack(i + 1, j), backtrack(i, j + 1))\n",
+    "\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestCommonSubsequenceMemo(\"abcde\", \"ace\") == 3\n",
+    "assert longestCommonSubsequenceMemo(\"bsbininm\", \"jmjkbkjkv\") == 1\n",
+    "assert longestCommonSubsequenceMemo(\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\", \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\") == 35\n",
+    "assert longestCommonSubsequenceMemo(\"bl\", \"yby\") == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30813726",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestCommonSubsequenceTab(text1: str, text2: str) -> int:\n",
+    "    # Time: O(M x N), Space: O(N x M)\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    dp: list[list[int]] = [[0 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if text1[i] == text2[j]:\n",
+    "                dp[i][j] = 1 + dp[i + 1][j + 1]\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i + 1][j], dp[i][j + 1])\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestCommonSubsequenceTab(\"abcde\", \"ace\") == 3\n",
+    "assert longestCommonSubsequenceTab(\"bsbininm\", \"jmjkbkjkv\") == 1\n",
+    "assert longestCommonSubsequenceTab(\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\", \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\") == 35\n",
+    "assert longestCommonSubsequenceTab(\"bl\", \"yby\") == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e099ef3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/longest-common-subsequence/submissions/1256127917\n",
+    "def longestCommonSubsequence(text1: str, text2: str) -> int:\n",
+    "    # Time: O(M x N), Space: O(N2 + N2)\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    dp: list[int] = [0 for j in range(N2 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        next_dp: list[int] = list(dp)\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if text1[i] == text2[j]:\n",
+    "                next_dp[j] = 1 + dp[j + 1]\n",
+    "            else:\n",
+    "                next_dp[j] = max(dp[j], next_dp[j + 1])\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestCommonSubsequence(\"abcde\", \"ace\") == 3\n",
+    "assert longestCommonSubsequence(\"bsbininm\", \"jmjkbkjkv\") == 1\n",
+    "assert longestCommonSubsequence(\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\", \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\") == 35\n",
+    "assert longestCommonSubsequence(\"bl\", \"yby\") == 1"
    ]
   }
  ],
