--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -3310,6 +3310,7 @@
      "iopub.status.idle": "2024-05-12T13:56:45.167178Z",
      "shell.execute_reply": "2024-05-12T13:56:45.166731Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016258,
      "end_time": "2024-05-12T13:56:45.168195",
@@ -3343,6 +3344,369 @@
     "assert longestCommonSubsequence(\"bsbininm\", \"jmjkbkjkv\") == 1\n",
     "assert longestCommonSubsequence(\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\", \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\") == 35\n",
     "assert longestCommonSubsequence(\"bl\", \"yby\") == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01786f1",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/-zI4mrF2Pb4?si=8kICsv0E7jYx6sWn\n",
+    "Print longest common subsequece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c0d3fe8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def all_longest_common_subsequences(text1: str, text2: str) -> list[str]:\n",
+    "    \"\"\"\n",
+    "    DP grid computes the longest common subseq length given starting pos of text1, text2\n",
+    "    We start at -1, -1 on the grid.\n",
+    "    If text1[i] == text2[j], we know that the line: 1 + dp[i + 1][j + 1] was executed, there we increment both i, j by 1\n",
+    "    If text1[i] != text2[j], either the max came from text1 or text2. If only one max exists, recurse into that else recurse through both\n",
+    "\n",
+    "    Time: DP grid compute: O(M x N) + Backtracking to find longest common subsequence: O(M + N)\n",
+    "    Space: O(M x N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    dp: list[list[int]] = [[0 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if text1[i] == text2[j]:\n",
+    "                dp[i][j] = 1 + dp[i + 1][j + 1]\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i + 1][j], dp[i][j + 1])\n",
+    "\n",
+    "    def backtrack(i: int, j: int):\n",
+    "        if dp[i][j] == 0:\n",
+    "            result.add(''.join(stack))\n",
+    "            return\n",
+    "        elif text1[i] == text2[j]:\n",
+    "            stack.append(text1[i])\n",
+    "            backtrack(i + 1, j + 1)\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            max_ = max(dp[i + 1][j], dp[i][j + 1])\n",
+    "            if dp[i + 1][j] == max_:\n",
+    "                backtrack(i + 1, j)\n",
+    "            if dp[i][j + 1] == max_:\n",
+    "                backtrack(i, j + 1)\n",
+    "\n",
+    "    result: set[str] = set()\n",
+    "    stack: list[str] = []\n",
+    "    backtrack(i, j)\n",
+    "    return sorted(result)\n",
+    "\n",
+    "# Tesitng the solution\n",
+    "assert all_longest_common_subsequences(\"abcde\", \"ace\") == ['ace']\n",
+    "assert all_longest_common_subsequences(\"abaaa\", \"baabaca\") == ['aaaa', 'abaa', 'baaa']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b3c52ec",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/_wP9mWNPL5w?si=UHRuFgDl6a5g8OlH\n",
+    "Longest common Substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95b817c0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestCommonSubstrTab(text1: str, text2: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Same code as longest common subsequence but with a slight modification.\n",
+    "    Here we reset the dp table value to 0 if text1[i] != text2[j] instead of getting the max of dp[i + 1][j] or dp[i][j + 1] since we are not allowed non consequetive values.\n",
+    "\n",
+    "    Time: O(N1 x N2), Space: O(N1 x N2)\n",
+    "    \"\"\"\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    dp: list[list[int]] = [[0 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    max_length = 0\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if text1[i] == text2[j]:\n",
+    "                dp[i][j] = dp[i + 1][j + 1] + 1\n",
+    "                max_length = max(max_length, dp[i][j])\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestCommonSubstrTab(\"ABCDGH\", \"ACDGHR\") == 4\n",
+    "assert longestCommonSubstrTab(\"ABC\", \"ACB\") == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32221a7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestCommonSubstr(text1: str, text2: str) -> int:\n",
+    "    \"\"\"Time: O(N1 x N2), Space: O(N2)\"\"\"\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    dp: list[int] = [0 for j in range(N2 + 1)]\n",
+    "    max_length = 0\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        next_dp: list[int] = [0]\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if text1[i] == text2[j]:\n",
+    "                next_dp.append(1 + dp[j + 1])\n",
+    "                max_length = max(max_length, next_dp[-1])\n",
+    "            else:\n",
+    "                next_dp.append(0)\n",
+    "\n",
+    "        dp = list(reversed(next_dp))\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestCommonSubstr(\"ABCDGH\", \"ACDGHR\") == 4\n",
+    "assert longestCommonSubstr(\"ABC\", \"ACB\") == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32bd7ea7",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/6i_T5kkfv4A?si=3pJmCMahWgxxnGRq\n",
+    "Longest Palindromic Subsequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a53967",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/longest-palindromic-subsequence/submissions/1256744931\n",
+    "def longestPalindromeSubseqMemo(text: str) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i >= j:\n",
+    "            return int(i == j)\n",
+    "        elif text[i] == text[j]:\n",
+    "            return 2 + backtrack(i + 1, j - 1)\n",
+    "        else:\n",
+    "            return max(backtrack(i + 1, j), backtrack(i, j - 1))\n",
+    "\n",
+    "    N = len(text)\n",
+    "    result = backtrack(0, N - 1)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestPalindromeSubseqMemo(\"bbbab\") == 4\n",
+    "assert longestPalindromeSubseqMemo(\"cbbd\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5612366",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestPalindromeSubseqTab(text: str) -> int:\n",
+    "    N = len(text)\n",
+    "    dp: list[list[int]] = [[0 if j != (N - 1) / 2 else 1 for j in range(N + 1)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(N):\n",
+    "            if i >= j:\n",
+    "                dp[i][j] = int(i == j)\n",
+    "            elif text[i] == text[j]:\n",
+    "                dp[i][j] = 2 + dp[i + 1][j - 1]\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i + 1][j], dp[i][j - 1])\n",
+    "\n",
+    "    return dp[0][N - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestPalindromeSubseqTab(\"bbbab\") == 4\n",
+    "assert longestPalindromeSubseqTab(\"cbbd\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a74fa1d5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/longest-palindromic-subsequence/submissions/1256759252\n",
+    "def longestPalindromeSubseq(text: str) -> int:\n",
+    "    N = len(text)\n",
+    "    dp: list[int] = [0 if j != (N - 1) / 2 else 1 for j in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        next_dp: list[int] = []\n",
+    "        for j in range(N):\n",
+    "            if i >= j:\n",
+    "                next_dp.append(int(i == j))\n",
+    "            elif text[i] == text[j]:\n",
+    "                next_dp.append(2 + dp[j - 1])\n",
+    "            else:\n",
+    "                next_dp.append(max(dp[j], next_dp[-1]))\n",
+    "\n",
+    "        # We run the inner loop for N iterations, dp however has a length of N + 1\n",
+    "        # Hence we add 0 in the end to make sure that the values are consistent of DP compute\n",
+    "        # We could make this simpler by initializing next_dp as list(dp), but that would\n",
+    "        # be wasted O(N) runtime.\n",
+    "        next_dp.append(0)\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[N - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestPalindromeSubseq(\"bbbab\") == 4\n",
+    "assert longestPalindromeSubseq(\"cbbd\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94ba584",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestPalindromeSubseqStriver(text: str) -> int:\n",
+    "    \"\"\"\n",
+    "    1. We reverse text.\n",
+    "    2. Whatever value is the LCS of both the texts, that is our desired answer\n",
+    "    \"\"\"\n",
+    "    def LCS(text1: str, text2: str) -> int:\n",
+    "        N = len(text1)\n",
+    "        dp: list[int] = [0 for j in range(N + 1)]\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            next_dp: list[int] = list(dp)\n",
+    "            for j in range(N - 1, -1, -1):\n",
+    "                if text1[i] == text2[j]:\n",
+    "                    next_dp[j] = 1 + dp[j + 1]\n",
+    "                else:\n",
+    "                    next_dp[j] = max(dp[j], next_dp[j + 1])\n",
+    "            dp = next_dp\n",
+    "\n",
+    "        return dp[0]\n",
+    "\n",
+    "    return LCS(text, text[::-1])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestPalindromeSubseqStriver(\"bbbab\") == 4\n",
+    "assert longestPalindromeSubseqStriver(\"cbbd\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a62593a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Video link: https://youtu.be/xPBLEj41rFU?si=TkaEwZIQqY7WkasB\n",
+    "# Minimum insertions to make a string palindromic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a73343a1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/minimum-insertion-steps-to-make-a-string-palindrome/submissions/1256992480/\n",
+    "def minInsertions(text: str) -> int:\n",
+    "    \"\"\"\n",
+    "    1. Find the longest palindromic substring\n",
+    "    2. Minimum insertions required would be length of the N - longest palindromic substr\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def longestPalindromicSubstrLength(i: int, j: int) -> int:\n",
+    "        if i >= j:\n",
+    "            return int(i == j)\n",
+    "        elif text[i] == text[j]:\n",
+    "            return 2 + longestPalindromicSubstrLength(i + 1, j - 1)\n",
+    "        else:\n",
+    "            return max(longestPalindromicSubstrLength(i + 1, j), longestPalindromicSubstrLength(i, j - 1))\n",
+    "\n",
+    "    N = len(text)\n",
+    "    return N - longestPalindromicSubstrLength(0, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minInsertions(\"mbadm\") == 2\n",
+    "assert minInsertions(\"leetcode\") == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76604d02",
+   "metadata": {},
+   "source": [
+    "Minimum ops to convert s1 to s2\n",
+    "Video Link: https://youtu.be/yMnH0jrir0Q?si=WNsLNkqd3rhHqzDX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d4a7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/delete-operation-for-two-strings/submissions/1257015539\n",
+    "def minDistance(word1: str, word2: str) -> int:\n",
+    "    \"\"\"\n",
+    "    The idea is to think about what characters we should leave untouched. In this\n",
+    "    case, we can leave out characters that are subsequences also present in word2.o\n",
+    "\n",
+    "    Hence logic: Find length of longest common subsequence -> (N1 - S) + (N2 - S)\n",
+    "    \"\"\"\n",
+    "    N1, N2 = len(word1), len(word2)\n",
+    "    dp: list[int] = [0 for j in range(N2 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        next_dp: list[int] = [0]\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if word1[i] == word2[j]:\n",
+    "                next_dp.append(1 + dp[j + 1])\n",
+    "            else:\n",
+    "                next_dp.append(max(dp[j], next_dp[-1]))\n",
+    "\n",
+    "        next_dp.reverse()\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    substr_length = dp[0]\n",
+    "    return (N1 - substr_length) + (N2 - substr_length)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minDistance(\"leetcode\", \"etco\") == 4\n",
+    "assert minDistance(\"sea\", \"eat\") == 2"
    ]
   }
  ],
