--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -246,6 +246,7 @@
      "iopub.status.idle": "2024-05-12T13:56:41.320916Z",
      "shell.execute_reply": "2024-05-12T13:56:41.320442Z"
     },
+    "lines_to_next_cell": 2,
     "papermill": {
      "duration": 0.007268,
      "end_time": "2024-05-12T13:56:41.322059",
@@ -275,23 +276,6 @@
     "\n",
     "    return root"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "768005d2",
-   "metadata": {
-    "papermill": {
-     "duration": 0.001324,
-     "end_time": "2024-05-12T13:56:41.324778",
-     "exception": false,
-     "start_time": "2024-05-12T13:56:41.323454",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
