--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -3847,6 +3847,7 @@
      "iopub.status.idle": "2024-05-13T16:03:37.415226Z",
      "shell.execute_reply": "2024-05-13T16:03:37.414735Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.021004,
      "end_time": "2024-05-13T16:03:37.416466",
@@ -3885,6 +3886,220 @@
     "# Testing the solution\n",
     "assert minDistance(\"leetcode\", \"etco\") == 4\n",
     "assert minDistance(\"sea\", \"eat\") == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899a0256",
+   "metadata": {},
+   "source": [
+    "Shortest common supersequence: https://youtu.be/xElxAuBcvsU?si=A_v7qeegsKrHgGle\n",
+    "https://leetcode.com/problems/shortest-common-supersequence/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddeea61a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/shortest-common-supersequence/submissions/1257426491\n",
+    "def shortestCommonSupersequenceBetter(str1: str, str2: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Logic: Common characters should be taken once. Add missing characters in order.\n",
+    "    \"\"\"\n",
+    "    N1, N2 = len(str1), len(str2)\n",
+    "\n",
+    "    # Compute the DP grid for Longest common subsequence\n",
+    "    dp: list[list[int]] = [[0 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if str1[i] == str2[j]:\n",
+    "                dp[i][j] = 1 + dp[i + 1][j + 1]\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i + 1][j], dp[i][j + 1])\n",
+    "\n",
+    "    # Find out the subsequence\n",
+    "    lcs_list: list[str] = []\n",
+    "    i = j = 0\n",
+    "    while i < N1 and j < N2:\n",
+    "        if str1[i] == str2[j]:\n",
+    "            lcs_list.append(str1[i])\n",
+    "            i, j = i + 1, j + 1\n",
+    "        elif dp[i][j + 1] >= dp[i + 1][j]:\n",
+    "            j = j + 1\n",
+    "        else:\n",
+    "            i = i + 1\n",
+    "\n",
+    "    # Compute LCS string\n",
+    "    lcs_list.append(\"*\")\n",
+    "    lcs = ''.join(lcs_list)\n",
+    "    N3 = len(lcs)\n",
+    "\n",
+    "    # Add the missing characters in order\n",
+    "    i = j = k = 0\n",
+    "    supersequence_list: list[str] = []\n",
+    "    while k < N3:\n",
+    "        while i < N1 and str1[i] != lcs[k]:\n",
+    "            supersequence_list.append(str1[i])\n",
+    "            i += 1\n",
+    "        while j < N2 and str2[j] != lcs[k]:\n",
+    "            supersequence_list.append(str2[j])\n",
+    "            j += 1\n",
+    "        supersequence_list.append(lcs[k])\n",
+    "        i, j, k = i + 1, j + 1, k + 1\n",
+    "\n",
+    "    supersequence_list.pop()\n",
+    "    return ''.join(supersequence_list)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert len(shortestCommonSupersequenceBetter(\"abac\", \"cab\")) == 5\n",
+    "assert len(shortestCommonSupersequenceBetter(\"brute\", \"groot\")) == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8a2cfe9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/shortest-common-supersequence/submissions/1257436090/\n",
+    "def shortestCommonSupersequenceStriver(str1: str, str2: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Instead of computing the missing characters seperately we add them during out iteration through the DP table itself.\n",
+    "    \"\"\"\n",
+    "    N1, N2 = len(str1), len(str2)\n",
+    "\n",
+    "    # Compute the DP grid for Longest common subsequence\n",
+    "    dp: list[list[int]] = [[0 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if str1[i] == str2[j]:\n",
+    "                dp[i][j] = 1 + dp[i + 1][j + 1]\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i + 1][j], dp[i][j + 1])\n",
+    "\n",
+    "    # Find out the supersequence, slight modification to LCS print code\n",
+    "    # Instead of iterating until any one of the strings going out of bounds, we iterate until both are out of bounds\n",
+    "    # When strings don't match and we go to the direction of maximum in the DP table, we add the string that is being shrunk\n",
+    "    # j = j + 1 code => str2[j] is added other wise str1[i]\n",
+    "    supersequence_list: list[str] = []\n",
+    "    i = j = 0\n",
+    "    while i < N1 or j < N2:\n",
+    "        if i < N1 and j < N2 and str1[i] == str2[j]:\n",
+    "            supersequence_list.append(str1[i])\n",
+    "            i, j = i + 1, j + 1\n",
+    "        elif i >= N1 or (j < N2 and dp[i][j + 1] >= dp[i + 1][j]):\n",
+    "            supersequence_list.append(str2[j])\n",
+    "            j = j + 1\n",
+    "        else:\n",
+    "            supersequence_list.append(str1[i])\n",
+    "            i = i + 1\n",
+    "\n",
+    "    return ''.join(supersequence_list)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert len(shortestCommonSupersequenceStriver(\"abac\", \"cab\")) == 5\n",
+    "assert len(shortestCommonSupersequenceStriver(\"brute\", \"groot\")) == 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e842207",
+   "metadata": {},
+   "source": [
+    "Number of Distinct Subsequences: https://leetcode.com/problems/distinct-subsequences\n",
+    "Video Link: https://youtu.be/nVG7eTiD2bY?si=aNNyhjH2VDvfErnT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b80cade8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def numDistinctMemo(s: str, t: str) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if j >= N2:\n",
+    "            return 1\n",
+    "        elif i >= N1:\n",
+    "            return 0\n",
+    "        elif s[i] != t[j]:\n",
+    "            return backtrack(i + 1, j)\n",
+    "        else:\n",
+    "            return backtrack(i + 1, j + 1) + backtrack(i + 1, j)\n",
+    "\n",
+    "    N1, N2 = len(s), len(t)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numDistinctMemo(\"babgbag\", \"bag\") == 5\n",
+    "assert numDistinctMemo(\"rabbbit\", \"rabbit\") == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97af7ce5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def numDistinctTab(s: str, t: str) -> int:\n",
+    "    N1, N2 = len(s), len(t)\n",
+    "    dp: list[list[int]] = [[0 if j < N2 else 1 for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if s[i] != t[j]:\n",
+    "                dp[i][j] = dp[i + 1][j]\n",
+    "            else:\n",
+    "                dp[i][j] = dp[i + 1][j + 1] + dp[i + 1][j]\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numDistinctTab(\"babgbag\", \"bag\") == 5\n",
+    "assert numDistinctTab(\"rabbbit\", \"rabbit\") == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fc3008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/distinct-subsequences/submissions/1258020441\n",
+    "def numDistinct(s: str, t: str) -> int:\n",
+    "    N1, N2 = len(s), len(t)\n",
+    "    dp: list[int] = [0 if j < N2 else 1 for j in range(N2 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        next_dp: list[int] = [1]\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if s[i] != t[j]:\n",
+    "                next_dp.append(dp[j])\n",
+    "            else:\n",
+    "                next_dp.append(dp[j + 1] + dp[j])\n",
+    "\n",
+    "        next_dp.reverse()\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numDistinct(\"babgbag\", \"bag\") == 5\n",
+    "assert numDistinct(\"rabbbit\", \"rabbit\") == 3"
    ]
   }
  ],
